--- a/quartos.html
+++ b/quartos.html
@@ -22,7 +22,7 @@
                     <li>
                         <div class="dropdown">
                             <span class= "dropbtn">
-                              <a><i class="fas fa-angle-double-down"></i></a>
+                                <a class="fas fa-angle-double-down" style="display: inline-block;"></a>
                             </span>
                             <div class="dropdown-content">
                               <a href="rooms.html">English</a>
