--- a/lazer.html
+++ b/lazer.html
@@ -21,7 +21,7 @@
                     <li><a href="contato.html">Fale Conosco</a></li>
                     <li><div class="dropdown">
                         <span class= "dropbtn">
-                          <a><i class="fas fa-angle-double-down"></i></a>
+                            <a class="fas fa-angle-double-down" style="display: inline-block;"></a>
                         </span>
                         <div class="dropdown-content">
                           <a href="todo.html">English</a>
