fixed dropdown content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li>
                         <div class="dropdown">
                             <span class= "dropbtn">
-                              <a class="fas fa-angle-double-down" style="display: inline-block;"></a>
+                              <a class="fas fa-angle-double-down"></a>
                             </span>
                             <div class="dropdown-content">
                               <a href="homept.html">Portuguese</a>
